Added all pages except projects

--- a/themes/hugo-coder/assets/scss/_base.scss
+++ b/themes/hugo-coder/assets/scss/_base.scss
@@ -26,13 +26,12 @@ body {
 a {
   font-weight: 500;
   color: $link-color;
-  text-decoration: none;
+  text-decoration: underline;
   transition: all 0.25s ease-in;
+}
 
-  &:focus,
-  &:hover {
-    text-decoration: underline;
-  }
+.navigation-list a, .navigation-title {
+  text-decoration: none;
 }
 
 p {
