--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -14,7 +14,7 @@
       {{ end }}
       {{ if not .Site.Params.hideCredits }}
         {{ if not .Site.Params.hideCopyright }} · {{ end }}
-        {{ i18n "powered_by" }} <a href="https://gohugo.io/">Hugo</a> & <a href="https://github.com/luizdepra/hugo-coder/">Coder</a>.
+        {{ i18n "powered_by" }} <a href="https://gohugo.io/">hugo</a> & <a href="https://github.com/luizdepra/hugo-coder/">coder</a>.
       {{ end }}
       {{ if .Site.Params.commit }}
         {{ if .GitInfo }}
